--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.21.0",
+    "@auth/prisma-adapter": "^2.4.2",
+    "@prisma/client": "^5.18.0",
+    "axios": "^1.7.7",
     "next": "14.2.15",
-    "next-auth": "^4.24.8",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -25,7 +28,7 @@
     "@types/react-dom": "^18",
     "bcryptjs": "^2.4.3",
     "postcss": "^8",
-    "prisma": "^5.21.0",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
